<resources>
    <string name="app_name">Zenith</string>

<!--    Routes-->
    <string name="route_home">Home</string>
    <string name="route_history">History</string>
    <string name="route_workouts">Workouts</string>
    <string name="route_exercises">Exercises</string>
    <string name="route_measurements">Measurements</string>

    <string name="action_confirm">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_submit">Submit</string>
    <string name="action_finish">Finish</string>

    <string name="exercise_name_hint">Exercise Name</string>
    <string name="category_label">Category</string>
    <string name="bodypart_label">Body Part</string>
    <string name="action_workout_create">Create Empty Workout</string>
    <string name="workout_name_hint">Workout Name</string>
    <string name="action_add_set">Add Set</string>
    <string name="label_set">SET</string>
    <string name="label_previous">PREVIOUS</string>
    <string name="label_lbs">LBS</string>
    <string name="label_reps">REPS</string>
    <string name="placeholder">Placeholder</string>
    <string name="action_exercise_create">Create Exercise</string>
    <string name="new_exercise">New Exercise</string>
    <string name="action_search">Search</string>
    <string name="action_add_exercise">Add Exercise</string>
    <string name="action_cancel_workout">Cancel Workout</string>
    <string name="action_complete">Action Complete</string>
    <string name="action_delete">Action Delete</string>
    <string name="exercise_image_txt">Exercise Image</string>
    <string name="sample_category">Sample Category</string>
    <string name="sample_body_part">Sample Body Part</string>
    <string name="exercise_instructions">Instructions</string>
    <string name="sample_instructions_txt">Sample Instructions</string>
    <string name="quick_start">Quick Start</string>
    <string name="previous_workouts">Previous Workouts</string>
    <string name="workout_name_placeholder">Workout Name PlaceHolder</string>
    <string name="start_time_placeholder">Start Time Placeholder</string>
    <string name="end_time_placeholder">End Time Placeholder</string>
    <string name="workout_name_sample">Workout Name Sample</string>
    <string name="action_perform_again">Perform Again</string>
    <string name="new_workout">New Workout</string>
    <string name="nav_item_statistics">Statistics</string>
    <string name="action_select_exercise">Select Exercise</string>
    <string name="workout_statistics">Workout Statistics</string>
    <string name="no_data">No Data</string>
    <string name="action_delete_workout">Delete Workout</string>
</resources>