<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/set_index"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/label_set"
        android:textAppearance="@style/TextAppearance.AppCompat.Label" />

    <com.google.android.material.textfield.TextInputEditText
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
        android:layout_gravity="center"
        android:layout_marginHorizontal="4dp"
        android:layout_weight="3"
        android:background="@drawable/text_input_shape"
        android:hint="@string/label_lbs"
        android:inputType="numberDecimal"
        android:paddingVertical="4dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Label" />

    <com.google.android.material.textfield.TextInputEditText
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
        android:layout_gravity="center"
        android:layout_marginHorizontal="4dp"
        android:layout_weight="3"
        android:background="@drawable/text_input_shape"
        android:hint="@string/label_reps"
        android:inputType="number"
        android:paddingVertical="4dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Label" />

    <ImageButton
        android:layout_gravity="center"
        android:layout_weight="1"
        android:contentDescription="@string/action_complete"
        android:paddingHorizontal="0dp"
        android:paddingVertical="4dp"
        android:src="@drawable/ic_check_1" />

    <ImageButton
        android:layout_gravity="center"
        android:layout_weight="1"
        android:contentDescription="@string/action_delete"
        android:paddingHorizontal="0dp"
        android:paddingVertical="4dp"
        android:src="@drawable/ic_delete" />
</merge>
