<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/workout_exercise_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/workout_exercise_row_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:text="@string/placeholder" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_menu_vertical" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/workout_exercise_header">

        <TableLayout
            android:id="@+id/workout_exercise_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:weightSum="9">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/label_set"
                    android:textAppearance="@style/TextAppearance.AppCompat.Label" />

                <TextView
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:text="@string/label_lbs"

                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Label" />

                <TextView
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:text="@string/label_reps"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Label" />

                <ImageView
                    android:layout_weight="1"
                    android:src="@drawable/ic_check_1" />

                <ImageView
                    android:layout_weight="1"
                    android:src="@drawable/ic_delete" />
            </TableRow>

        </TableLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/workout_exercise_add_set_btn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_add_set" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>