<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/workout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/workout_name_placeholder"
        android:textAppearance="@style/TextAppearance.AppCompat.Heading" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_history"
            app:tint="?attr/colorOnSurface" />
        <TextView
            android:id="@+id/workout_start_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_time_placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat.Label" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_history"
            app:tint="?attr/colorOnSurface" />

        <TextView
            android:id="@+id/workout_end_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_time_placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat.Label" />
    </LinearLayout>

</LinearLayout>